refactored program output